--- a/history/main/templates/hero/bookshelf.html
+++ b/history/main/templates/hero/bookshelf.html
@@ -8,8 +8,8 @@
    
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> Dune</span>
-          <span class="spine-author"> Frank Herbert </span>
+          <span class="spine-title"> Jose Rizal</span>
+          <span class="spine-author"> National Hero </span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
@@ -19,8 +19,8 @@
       
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> 1984</span>
-          <span class="spine-author"> George Orwell </span>
+          <span class="spine-title"> Andres Bonifacio</span>
+          <span class="spine-author"> Father of Philippine Revoloution </span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
@@ -30,8 +30,8 @@
       
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> To Kill a Mockingbird</span>
-          <span class="spine-author"> Harper Lee </span>
+          <span class="spine-title"> Emilio Aguinaldo</span>
+          <span class="spine-author"> First President of the Philippines</span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
@@ -41,8 +41,8 @@
       
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> The Lord of the Rings</span>
-          <span class="spine-author"> J.R.R. Tolkien </span>
+          <span class="spine-title"> Apolinario Mabini</span>
+          <span class="spine-author"> Sublime Paralytic and Prime Minister of the First Philippine Republic</span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
@@ -52,8 +52,8 @@
       
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> Harry Potter and the Sorcerer's Stone </span>
-          <span class="spine-author"> J.K. Rowling </span>
+          <span class="spine-title"> Antonio Luna</span>
+          <span class="spine-author"> General of the Philippine Revolutionary Army </span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
@@ -63,8 +63,8 @@
       
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> Tim burnik </span>
-          <span class="spine-author"> Allen kalbo </span>
+          <span class="spine-title"> Juan Luna </span>
+          <span class="spine-author"> Renowned Painter and Revolutionary </span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
@@ -74,8 +74,8 @@
       
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> Jhay </span>
-          <span class="spine-author"> Mhikey</span>
+          <span class="spine-title"> Gabriela Silang  </span>
+          <span class="spine-author"> Heroine of the Philippine Revolution</span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
@@ -85,8 +85,8 @@
 
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> National Hero</span>
-          <span class="spine-author"> Utak ng Himagsikan </span>
+          <span class="spine-title"> Melchora Aquino</span>
+          <span class="spine-author"> Mother of the Philippine Revolution</span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
