--- a/history/main/templates/search/search.html
+++ b/history/main/templates/search/search.html
@@ -98,7 +98,7 @@ main#result {
 
 <h2>Result from other site </h2>
 
-{% for item in search_result %}
+<!-- {% for item in search_result %}
 
 <div class="search-result-container">
     <a href="https://www.anotherexample.com" class="search-result-title">{{ item.url }}</a>
@@ -108,7 +108,7 @@ main#result {
     </span>
     <span class="search-result-metadata">Aug 23, 2024 • 3 min read</span>
 </div>
-{% endfor %}
+{% endfor %} -->
 <!-- {
 {% for item in search_result %}
 
