--- a/history/main/templates/games/timelineQuest.html
+++ b/history/main/templates/games/timelineQuest.html
@@ -87,10 +87,10 @@ button {
         </div>
         <div id="events">
             <!-- Draggable events -->
-            <div class="draggable" draggable="true" data-order="2">Proclamation of Martial Law (1972)</div>
-            <div class="draggable" draggable="true" data-order="4">EDSA People Power Revolution (1986)</div>
-            <div class="draggable" draggable="true" data-order="1">Declaration of Philippine Independence (1898)</div>
-            <div class="draggable" draggable="true" data-order="3">Philippine Commonwealth (1935)</div>
+            <div class="draggable" draggable="true" data-order="1">Proclamation of Martial Law (1972)</div>
+            <div class="draggable" draggable="true" data-order="2">EDSA People Power Revolution (1986)</div>
+            <div class="draggable" draggable="true" data-order="3">Declaration of Philippine Independence (1898)</div>
+            <div class="draggable" draggable="true" data-order="4">Philippine Commonwealth (1935)</div>
         </div>
     </div>
     <button id="check-order">Check Order</button>
@@ -99,6 +99,84 @@ button {
 
 
 <script>
+    const timeline = [
+    {
+        event: 'Declaration of Philippine Independence',
+        date: new Date(1898, 5, 12),
+        ranking: 1
+    },
+    {
+        event: 'Inauguration of the First Philippine Republic',
+        date: new Date(1899, 0, 23),
+        ranking: 2
+    },
+    {
+        event: 'Philippine-American War Begins',
+        date: new Date(1899, 1, 4),
+        ranking: 3
+    },
+    {
+        event: 'Death of José Rizal',
+        date: new Date(1896, 11, 30),
+        ranking: 4
+    },
+    {
+        event: 'Tydings–McDuffie Act Signed',
+        date: new Date(1934, 2, 24),
+        ranking: 5
+    },
+    {
+        event: 'Commonwealth of the Philippines Inaugurated',
+        date: new Date(1935, 10, 15),
+        ranking: 6
+    },
+    {
+        event: 'Japanese Occupation of the Philippines',
+        date: new Date(1942, 0, 2),
+        ranking: 7
+    },
+    {
+        event: 'Bataan Death March',
+        date: new Date(1942, 3, 9),
+        ranking: 8
+    },
+    {
+        event: 'The Fall of Corregidor',
+        date: new Date(1942, 4, 6),
+        ranking: 9
+    },
+    {
+        event: 'Battle of Manila',
+        date: new Date(1945, 1, 3),
+        ranking: 10
+    },
+    {
+        event: 'Independence from the United States',
+        date: new Date(1946, 6, 4),
+        ranking: 11
+    },
+    {
+        event: 'Proclamation of Martial Law',
+        date: new Date(1972, 8, 21),
+        ranking: 12
+    },
+    {
+        event: 'EDSA People Power Revolution',
+        date: new Date(1986, 1, 25),
+        ranking: 13
+    },
+    {
+        event: 'People Power 2',
+        date: new Date(2001, 0, 20),
+        ranking: 14
+    },
+    {
+        event: 'Typhoon Yolanda',
+        date: new Date(2013, 10, 8),
+        ranking: 15
+    }
+];
+
     const draggables = document.querySelectorAll('.draggable');
 const dropzones = document.querySelectorAll('.dropzone');
 const checkOrderBtn = document.getElementById('check-order');
