--- a/history/main/templates/president/presidents_list.html
+++ b/history/main/templates/president/presidents_list.html
@@ -1,261 +1,143 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 {% block css %}
-
-<link rel="stylesheet" href="{{ url_for('static', filename='president/president.css')}}">
 
 <style>
 
-    .info-btn {
-        transform: scale(2);
-    }
-    main.president {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border: 5px double black;
-        border: 4px solid pink;
-        display: grid;
-        grid-template-columns: repeat(3, 400px);
-    }
 
-    main .f-container {
-        border: 4px solid pink;
-        display: grid;
-        grid-template-columns: repeat(3, 400px);
-        /* justify-content: center; */
-        /* align-items: center; */
-    }
-
+h1 {
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+}
 
 img {
-  border:solid 2px;
-  border-bottom-color:#ffe;
-  border-left-color:#eed;
-  border-right-color:#eed;
-  border-top-color:#ccb;
-  max-height:100%;
-  max-width:100%;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
 }
 
-.frame {
-  background-color:beige;
-  border:solid 5vmin beige;
-  border-bottom-color:#c17f2e;
-  border-left-color:#c17f2e;
-  border-radius:2px;
-  border-right-color: #c17f2e;
-  border-top-color:#ca7f2e;
-  box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
-  box-sizing:border-box;
-  display:inline-block;
-  margin:10vh 10vw;
-  height:400px;
-  width: 400px;
-  padding:8vmin;
-  position:relative;
-  text-align:center;
-
-}
-  .frame:before {
-    border-radius:2px;
-    bottom:-2vmin;
-    box-shadow:0 2px 5px 0 rgba(0,0,0,.25) inset;
-    content:"";
-    left:-2vmin;
-    position:absolute;
-    right:-2vmin;
-    top:-2vmin;
-  }
-  .frame:after {
-    border-radius:2px;
-    bottom:-2.5vmin;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.25);
-    content:"";
-    left:-2.5vmin;
-    position:absolute;
-    right:-2.5vmin;
-    top:-2.5vmin;
-  }
-
-
-
-
-  @import url("https://fonts.googleapis.com/css?family=Inter");
-
-
-.card-container {
-  /* background-color: SandyBrown; */
-  position: relative;
-  height: 100%;
+.btn {
+  color: #ffffff;
+  padding: 0.8rem;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  font-weight: 400;
+  display: block;
   width: 100%;
-  /* display: flex;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: transparent;
+}
+
+.btn:hover {
+  background-color: rgba(255, 255, 255, 0.12);
+}
+
+.cards {
+  display: flex;
   flex-wrap: wrap;
-  justify-content: space-between; */
-  /* flex-direction: column; */
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cards_item {
+  display: flex;
+  padding: 1rem;
+}
+
+@media (min-width: 40rem) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 56rem) {
+  .cards_item {
+    width: 33.3333%;
+  }
 }
 
 .card {
-  --push: 8px;
-  min-width: 320px;
-  max-width: 320px;
-  border: 1px solid black;
-  border-radius: 12px;
-  padding: 20px;
   background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
-  gap: 14px;
-  cursor: pointer;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: box-shadow 0.15s ease-in-out, transform 0.15s ease-in-out;
-
-  box-shadow: var(--push) var(--push) 0 0 black;
-
-  will-change: box-shadow, transform;
-
-  &:active {
-    box-shadow: 0 0 0 0 black;
-    transform: translate(calc(-50% + var(--push)), calc(-50% + var(--push)));
-  }
-
-  &:not(:active):hover {
-    --push: 4px;
-    box-shadow: var(--push) var(--push) 0 0 black;
-    transform: translate(calc(-50% + var(--push)), calc(-50% + var(--push)));
-  }
-}
-
-.image-container {
-  background-color: SandyBrown;
-  width: 100%;
-  height: 160px;
-  border-radius: 8px;
   overflow: hidden;
 }
-
-.image {
-  background-image: url("https://cdn.dribbble.com/users/1186668/screenshots/17303363/media/bc6aa9915a58811524bbbfd89cbb2d71.jpg");
-  background-position: center;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  height: 100%;
+.card-container {
+  margin-top: 6rem;
+}
+.card_content {
+  padding: 1rem;
+  background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
+}
+.card_image {
   width: 100%;
+  height: 200px; /* Set a fixed height to make all images the same height */
+  overflow: hidden; 
 }
 
-.tag {
-  background-color: SandyBrown;
-  align-self: flex-start;
-  border-radius: 4px;
-  padding: 8px 10px;
-  font-size: 12px;
-  font-weight: bold;
-  letter-spacing: 0.25px;
+.card_image img {
+  width: 100%;
+  /* object-fit: cover; */
+  height: 100%;
+  /* padding- */
+}
+.card_title {
+  color: #ffffff;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin: 0px;
 }
 
-h1 {
-  margin: 8px 0;
-  font-size: 20px;
-}
-
-.publication-date {
-  font-size: 14px;
-  color: rgba(0, 0, 0, 0.75);
-}
-
-p {
-  margin: 0;
-  font-size: 14px;
-  color: rgba(0, 0, 0, 0.65);
+.card_text {
+  color: #ffffff;
+  font-size: 0.875rem;
   line-height: 1.5;
+  margin-bottom: 1.25rem;    
+  font-weight: 400;
 }
-
-.user-info {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  margin-top: 8px;
+.made_by{
+  font-weight: 400;
+  font-size: 13px;
+  margin-top: 35px;
+  text-align: center;
 }
-
-.avatar {
-  background-color: black;
-  border-radius: 50%;
-  height: 28px;
-  width: 28px;
-  font-size: 8px;
-  color: sandybrown;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-}
-
-.name {
-  font-weight: bold;
-  font-size: 12px;
-}
-
-footer {
-  padding: 16px;
-  margin-left: auto;
-  margin-top: auto;
-
-  a {
-    font-weight: bold;
-    color: black;
-  }
-}
-
 </style>
 {% endblock %}
+
 {% block main %}
 
-<!-- <div class="presidents-list"> -->
-    
-  <div class="card-container">
 
-    {% for i in range(3) %}
-  <div class="card">
-    <div class="image-container">
-      <img class="image"></img>
-    </div>
-    <div class="tag">
-      <span>Ferdinand Marcos Jr.</span>
-    </div>
-    <div class="publication-date">
-      <span>2022-2026</span>
-    </div>
-    <h1>Salmon (/ˈsæmən/; pl.: salmon)</h1>
-    <p>Salmon is the common name for several commercially important species of euryhaline ray-finned fish from the genera Salmo and Oncorhynchus of the family Salmonidae, native to tributaries of the North Atlantic and North Pacific basins.</p>
-    <div class="user-info">
-      <div class="avatar">JD</div>
-      <span class="name">Jon Doe</span>
-    </div>
+<div class="card-container">
+
+  <ul class="cards">
+  {% for pres in range( p|length) %}
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_image"><img src="{{ url_for('static', filename='president/pics/' + pres|string + '.jpg')}}"></div>
+        <div class="card_content">
+          <h2 class="card_title">{{ p[pres].name  }}</h2>
+          <p class="card_text">{{  p[pres].title }} - {{  p[pres].term  }}</p>
+          <button class="btn card_btn">Read More</button>
+        </div>
+      </div>
+    </li>
+    {% endfor %}
   </div>
-  <footer>Image from: <a href="https://dribbble.com/shots/17303363-Sockeye-Salmon" target="_blank">Dribble</a></footer>
-  {% endfor %}
-</div>
-</div>
-
-
-    <div class="f-container">
-
-        <!-- <div class="frame">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/71829/mona-lisa.jpg" alt="Mona Lisa" />
-        </div>
-
-        <div class="frame">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/71829/mona-lisa.jpg" alt="Mona Lisa" />
-        </div>
-        <div class="frame">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/71829/mona-lisa.jpg" alt="Mona Lisa" />
-        </div> 
-    </div>-->
-</div>
-
+  <!-- <li class="cards_item">
+    <div class="card">
+      <div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>
+      <div class="card_content">
+        <h2 class="card_title">Card Grid Layout</h2>
+        <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+        <button class="btn card_btn">Read More</button>
+      </div>
+    </div>
+  </li> -->
 {% endblock %}
-
